gap solved

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -427,7 +427,7 @@ nav li:hover .dropdown-pages {
 .items-section .item-position {
     display: grid;
     grid-template-columns: repeat(3 , 1fr);
-    grid-gap: 4%;
+    grid-gap: 3rem;
     
 }
 
@@ -483,7 +483,7 @@ nav li:hover .dropdown-pages {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 0 0 7% 0;
-    grid-gap: 3%;
+    grid-gap: 2rem;
 }
 
 .activity .activity-items .activity-item div {
@@ -628,7 +628,7 @@ nav li:hover .dropdown-pages {
 .employees .employees-items {
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-gap: 4%;
+    grid-gap: 3rem;
 }
 
 .employees .employee-item {
@@ -714,7 +714,7 @@ nav li:hover .dropdown-pages {
 .comment .container {
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-gap: 5%;
+    grid-gap: 2rem;
 }
 
 .comment .container .overlay {
@@ -814,7 +814,7 @@ nav li:hover .dropdown-pages {
 .final .final-items {
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-gap: 4%;
+    grid-gap: 3rem;
 }
 
 .final .final-items .final-item .final-desc ,
@@ -988,7 +988,7 @@ footer .contact-1 ul li:nth-of-type(6) a:hover {
 footer .contact-2 {
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-gap: 4%;
+    grid-gap: 3rem;
 }
 
 
@@ -1059,7 +1059,7 @@ footer .contact-2 .img .img-grid {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
-    grid-gap: 5%;
+    grid-gap: 1rem;
 }
 
 footer .contact-2 .img .img-grid a {
@@ -1075,7 +1075,7 @@ footer .contact-3 {
     display: grid;
     grid-template-columns: repeat(4,1fr);
     margin: 10% 0;
-    grid-gap: 4%;
+    grid-gap: 1.5rem;
 }
 
 footer .contact-3 .number ,
@@ -1120,7 +1120,6 @@ footer .contact-3 .location .text a {
 footer .copyright {
     display: flex;
     justify-content: space-between;
-    margin: 11% 0;
 }
 
 footer .copyright span {
@@ -1239,16 +1238,11 @@ footer .copyright span {
         margin-top: -20%;
     }
 
-    .items-section .container {
-        padding-bottom: 25%;
-    }
-
 
     /* Activity */
 
     .activity .activity-items {
         grid-template-columns: repeat(1,1fr);
-        grid-gap: 12%;
     }
 
     .activity .activity-items .activity-item h2 {
@@ -1260,7 +1254,7 @@ footer .copyright span {
     }
 
     .activity .activity-items {
-        padding: 9% 0 25% 0;
+        padding: 9% 0 12% 0;
     }
 
     .activity a {
@@ -1284,7 +1278,7 @@ footer .copyright span {
     /* employee */
 
     .employees {
-        padding: 8% 0 53%;
+        padding: 8% 0 15%;
     }
 
     .employees .employees-items {
@@ -1308,7 +1302,7 @@ footer .copyright span {
 
     .count .count-items {
         grid-template-columns: repeat(2,1fr);
-        grid-row-gap: 12%;
+        grid-row-gap: 3rem;
     }
 
 
@@ -1323,7 +1317,7 @@ footer .copyright span {
     /* final */
 
     .final {
-        padding: 8% 0 38%;
+        padding: 8% 0 10%;
     }
 
     .final .final-items {
@@ -1367,7 +1361,7 @@ footer .copyright span {
     }
 
     footer .contact-2 .img {
-        padding-bottom: 45%;
+        padding-bottom: 10%%;
     }
 
     footer .contact-2 .img .img-grid {
@@ -1380,12 +1374,11 @@ footer .copyright span {
 
     footer .contact-3 {
         grid-template-columns: repeat(1,1fr);
-        grid-gap: 13%;
+        grid-gap: 1.5rem;
     }
 
     footer .copyright {
         flex-wrap: wrap;
-        margin: 20% 0 11% 0;
     }
 
     footer .copyright span {
@@ -1393,8 +1386,8 @@ footer .copyright span {
     }
 
     footer .contact-3 {
-        margin: 15% 0;
-        padding: 0 0 8% 0;
+        padding: 0 0 5% 0;
+        margin: 8% 0;
     }
 } 
 
@@ -1459,13 +1452,13 @@ footer .copyright span {
     }
 
     .items-section .container {
-        padding-bottom: 35%;
+    
     }
 
     /* activity */
 
     .activity .activity-items {
-        padding: 9% 0 53% 0;
+        padding: 9% 0 10% 0;
     }
 
     /* coffee */
@@ -1477,7 +1470,7 @@ footer .copyright span {
     /* employees */
 
     .employees{
-        padding: 15% 0 65%;
+        padding: 15% 0 15%;
     }
 
     .employees .employees-items {
@@ -1531,7 +1524,7 @@ footer .copyright span {
     /* final */
 
     .final {
-        padding: 20% 0 50%;
+        padding: 20% 0 15%;
     }
 
     .final .final-items {
@@ -1549,7 +1542,7 @@ footer .copyright span {
     }
 
     footer .contact-3 {
-        margin: 30% 0;
+        margin: 5%% 0;
     }
 }
 
